<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_details"
    android:orientation="vertical"
    tools:context=".fragments.RepoDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/ivAuthor"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom" />
    <View style="@style/Divider"/>
    <LinearLayout
        android:layout_marginRight="@dimen/right_margin_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_bottom">
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/author_text_size"
                android:text="@string/author_name"/>
            <TextView
                android:id="@+id/tvAuthor"
                android:textSize="@dimen/author_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/author_text_size"
                android:text="@string/repo_name"/>
            <TextView
                android:id="@+id/tvRepoTitle"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:textSize="@dimen/author_text_size"
                android:text="@string/date_created"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tvDateCreated"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:textSize="@dimen/author_text_size"
                android:text="@string/date_updated"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvDateUpdated"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:textSize="@dimen/author_text_size"
                android:text="@string/forks"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvForks"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:textSize="@dimen/author_text_size"
                android:text="@string/watchers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvWatchers"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:textSize="@dimen/author_text_size"
                android:text="@string/issues"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tvIssues"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:textSize="@dimen/author_text_size"
                android:text="@string/language"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tvLang"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:textSize="@dimen/author_text_size"
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tvDescription"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View style="@style/Divider"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="@dimen/right_margin_details"
                android:textSize="@dimen/author_text_size"
                android:text="@string/url"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvRepoUrl"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/author_text_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>