<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".fragments.AuthorFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/ivAuthor"
        android:layout_width="@dimen/imWidth"
        android:layout_height="@dimen/imHeightAuth"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btmMargin"
        android:text="@string/hello_blank_fragment" />
    <View style="@style/Divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/author_text_size"
            android:text="@string/author_name"/>
        <TextView
            android:id="@+id/tvAuthor"
            android:textSize="@dimen/author_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View style="@style/Divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/author_text_size"
            android:text="@string/details_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvAuthorHtml"
            android:textColor="@color/purple_700"
            android:textFontWeight="@integer/material_motion_duration_medium_2"
            android:textSize="@dimen/author_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>